Fix navbar margin for improved layout and add missing margins to maintext and secondtext for consistency

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ footer {
 .navbar {
     display: flex;
     justify-content: space-around;
-    margin: 8px 48px;
+    margin: 8px 48px 48px 8px ;
     
 }
 ul {
@@ -61,10 +61,12 @@ ul {
     font-size: 48px;
     font-weight: 900;
     color: #f9faf8;
+    margin: 0;
 }
 #secondtext {
     font-size: 18px;
     color: #E5E7EB;
+    margin: 0;
 }
 .parabutton button {
     background-color: #3882f6;
